# krypto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  bench_aes.cpp
include/krypto/: aes.h  util.h
include/krypto/internal/: math.h  padding.h  util.h
test/: CMakeLists.txt  test_aes.cpp
